<resources>
    <string name="app_name">S_Calculator</string>
    <string name="comma">,</string>
    <string name="shift">SHIFT</string>
    <string name="menu">MENU</string>
    <string name="more_function">More</string>
    <string name="delete">⌫</string>
    <string name="all_clear">AC</string>
    <string name="degree_conversion">DRG</string>
    <string name="format_shift">x⇔E</string>
    <string name="left_shift">◄</string>
    <string name="right_shift">►</string>
    <string name="integral">∫ dx</string>
    <string name="precision">Precis</string>
    <string name="π">π</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="i">i</string>
    <string name="e">e</string>
    <string name="minus_one_power">x\u207B\u00B9</string>
    <string name="square">x\u00B2</string>
    <string name="square_root">\u221Ax\u0305</string>
    <string name="xyy">x\u02B8</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="degree_minute_second">D°M\'S</string>
    <string name="fraction">d/c</string>
    <string name="variable">X</string>
    <string name="variable_memories">XY,M</string>
    <string name="MR">MR</string>
    <string name="M">x→M</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiplication">×</string>
    <string name="division">÷</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="zero">0</string>
    <string name="decimal_point">.</string>
    <string name="positive_negative">+/-</string>
    <string name="exponent">EXP</string>
    <string name="equal">=</string>
    //////////////////////////////////
    <string name="degree_convert">►DRG</string>
    <string name="number_format">FSE</string>
    <string name="derivatives">d/dx</string>
    <string name="constants">CNST</string>
    <string name="hyperbolic">hyp</string>
    <string name="arcsin">sin\u207B\u00B9</string>
    <string name="arccos">cos\u207B\u00B9</string>
    <string name="arctan">tan\u207B\u00B9</string>
    <string name="polar">∠</string>
    <string name="logx">log\u2093y</string>
    <string name="cube">x\u00B3</string>
    <string name="cubic_root">\u221Bx\u0305</string>
    <string name="x_root">\u02E3\u221Ay\u0305</string>
    <string name="tenBaseX">10\u02E3</string>
    <string name="eBaseX">e\u02E3</string>
    <string name="degree_back">←</string>
    <string name="mixed_number">ab/c</string>
    <string name="y">Y</string>
    <string name="mplus">M+</string>
    <string name="mminus">M-</string>
    <string name="mod">MOD</string>
    <string name="factorial">n!</string>
    <string name="combination">nCr</string>
    <string name="permutation">nPr</string>
    <string name="binary">►BIN</string>
    <string name="octal">►OCT</string>
    <string name="greatest_common_divisor">gcd</string>
    <string name="least_common_multiple">lcm</string>
    <string name="absolute">abs</string>
    <string name="decimal">►DEC</string>
    <string name="hexadecimal">►HEX</string>
    <string name="sign_function">sgn</string>
    <string name="random">ran#</string>
    <string name="percentage">%</string>
    <string name="unit_prefix">EXP SI</string>
    <string name="answer">ANS</string>

    <string name="clear_Memory">Clear All Memories</string>
</resources>
