<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DefineFunc" >

    <EditText
        android:id="@+id/tex_def_func"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="558dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_num_one"
                android:text="1" />

            <Button
                android:id="@+id/btn_num_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_num_two"
                android:text="2" />

            <Button
                android:id="@+id/btn_num_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_num_three"
                android:text="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_num_four"
                android:text="4" />

            <Button
                android:id="@+id/btn_num_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_num_five"
                android:text="5" />

            <Button
                android:id="@+id/btn_num_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_num_six"
                android:text="6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_num_seven"
                android:text="7" />

            <Button
                android:id="@+id/btn_num_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_num_eight"
                android:text="8" />

            <Button
                android:id="@+id/btn_num_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_num_nine"
                android:text="9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num_0"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="btn_num_zero"
                android:text="0" />

            <Button
                android:id="@+id/btn_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_decimal_point"
                android:text="." />

            <Button
                android:id="@+id/btn_pi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_num_pi"
                android:text="@string/π" />

            <Button
                android:id="@+id/btn_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_euler_number"
                android:text="e"
                android:textAllCaps="false" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_var_x"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="btn_x_var"
            android:text="variable X" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_plus"
                android:text="➕" />

            <Button
                android:id="@+id/btn_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_minus"
                android:text="➖" />

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_times"
                android:text="✖" />

            <Button
                android:id="@+id/btn_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_divide"
                android:text="➗" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_square"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_sq"
                android:text="@string/square" />

            <Button
                android:id="@+id/btn_s_root"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_square_root"
                android:text="@string/square_root" />

            <Button
                android:id="@+id/btn_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_log_x"
                android:text="@string/log"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_ln"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_ln_x"
                android:text="@string/ln"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_abs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_absolute"
                android:text="@string/absolute"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_sin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_tri_sin"
                android:text="sin"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_cos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_tri_cos"
                android:text="cos"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_tan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_tri_tan"
                android:text="tan"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_asin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_tri_asin"
                android:text="asin"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_acos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_tri_acos"
                android:text="acos"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_atan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_tri_atan"
                android:text="atan"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_lbra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_left_bra"
                android:text="@string/left_bracket" />

            <Button
                android:id="@+id/btn_rbra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_right_bra"
                android:text="@string/right_bracket" />

            <Button
                android:id="@+id/btn_dele"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_delete"
                android:text="@string/delete" />

            <Button
                android:id="@+id/btn_clear_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn_all_clear"
                android:text="@string/all_clear" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ch_form"
                android:layout_width="142dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn_form_check"
                android:text="check form" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="138dp"
                android:layout_height="61dp"
                android:layout_gravity="center"
                android:onClick="btn_save_func"
                android:text="save" />

            <Button
                android:id="@+id/btn_draw"
                android:layout_width="134dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn_draw_graph"
                android:text="draw" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>